@@ -31,7 +31,6 @@
 #include <sys/types.h>
 
 extern int kill_proc_tree(pid_t top, int sig);
-extern int kill_proc_tree_not_top(pid_t top, int sig);
 extern pid_t find_ancestor(pid_t process, char *process_name);
 /*
  * Some of processes may not be in the same process group
