@@ -8,6 +8,7 @@ documents those changes that are of interest to users and admins.
  -- Add job_id to maui scheduler plugin start job status message.
  -- Fix for srun's handling of null characters in stdout or stderr.
  -- Update job accounting for larger systems (Andy Riebs, uptodate.patch).
+ -- Fixes for proctrack/linuxproc and mpich-gm support (Takao Hatazaki, HP).
 
 * Changes in SLURM 0.6.9
 ========================
